<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".ui.about.AboutFragment">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="Version"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/about_version"
            android:textSize="20dp" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="#000000" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="Author"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/about_author"
            android:textSize="20dp" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="#000000" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="Contact FB"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_contact_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/about_contact_fb"
            android:textSize="20dp" />

    </TableRow>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/dancing_script_bold"
        android:text="Thank you for using this app. Click here to get a cat!"
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"
        android:textStyle="bold" />
</TableLayout>